# personal_blog

./: README.md
backend/: pyproject.toml
backend/backend/: settings.py
frontend/: package-lock.json  package.json
