[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the personal blog project"
authors = ["James Glenister <jglen419@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
